<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"   
	android:background="@color/agingtest_bkground"
	android:keepScreenOn="true"
    android:orientation="vertical" >
	<LinearLayout
	    android:id="@+id/title_lt"
	    android:layout_width="match_parent"
	    android:layout_height="45dp"          
		android:gravity="center_vertical"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:background="@color/agingtest_tittle"        
    	>    
	    <TextView
			android:layout_gravity="center_vertical"
			android:gravity="center_vertical"
	        android:layout_width="match_parent"            
	        android:layout_height="match_parent"          
			android:textStyle="bold"
	        android:textSize="20sp" 
	        android:text="@string/aging_title"/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/serial_lt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"   
        android:paddingLeft="5dp"
    	android:paddingRight="5dp" 
    	android:paddingTop="5dp"
        android:layout_below="@id/title_lt"    
        android:orientation="vertical"             
        >    
        <TextView  
	        android:id="@+id/serial_title_tv"
	        android:layout_width="match_parent"            
	        android:layout_height="wrap_content"    
	        android:textStyle="bold"          
	        android:textSize="16sp" 
	        android:text="@string/serial_agingtest_notice"/>
        <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"  
	        android:layout_marginLeft="5dp"  
	        > 
	        <CheckBox 
				android:id="@+id/serial_reboot_cb" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/serial_agingtest_reboot"
				android:gravity="center"
				/>
	        <TextView
	            android:id="@+id/serial_reboot_duration"
		        android:layout_width="wrap_content"            
		        android:layout_height="wrap_content"   
		        android:layout_centerVertical="true"  
		        android:layout_marginLeft="20dp"      
		        android:layout_toRightOf="@id/serial_reboot_cb"         
		        android:textSize="20sp" 
		        android:text="@string/duration"/>
	        <LinearLayout
	            android:id="@+id/serial_reboot_lt"
				android:layout_width="50dp"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@id/serial_reboot_duration"
				android:orientation="vertical">
					<EditText
						android:id="@+id/reboot_minite_et"
						android:layout_width="match_parent"            
						android:layout_height="40dp"   
						android:gravity="center"
						android:background="@color/agingtest_bkground"
						android:layout_gravity="center"
						android:maxLength="4"
						android:inputType="number"
						android:textColor="@android:color/white"
						android:textSize="16sp" 
						android:text="@string/serial_duration_def_minute"/>
					<View android:layout_width="match_parent"            
						android:layout_height="1dp" 
						android:layout_gravity="bottom"
						android:background="@android:color/white"/>
			</LinearLayout>
			<TextView
		        android:layout_width="wrap_content"            
		        android:layout_height="wrap_content"   
		        android:layout_centerVertical="true"  
		        android:layout_toRightOf="@id/serial_reboot_lt"
		        android:layout_marginLeft="15dp"         
		        android:textSize="16sp" 
		        android:text="@string/duration_minute"/>
        </RelativeLayout>
        <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"     
	        android:layout_marginLeft="5dp"       
	        > 
	        <CheckBox 
				android:id="@+id/serial_sleep_cb" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/serial_agingtest_sleep"
				android:gravity="center"
				/>
	        <TextView
	            android:id="@+id/serial_sleep_duration"
		        android:layout_width="wrap_content"            
		        android:layout_height="wrap_content"   
		        android:layout_toRightOf="@id/serial_sleep_cb"  
		        android:layout_centerVertical="true"   
		        android:layout_marginLeft="20dp"      
		        android:textSize="16sp" 
		        android:text="@string/duration"/>
	        <LinearLayout
	            android:id="@+id/serial_sleep_lt"
				android:layout_width="50dp"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@id/serial_sleep_duration"
				android:orientation="vertical">
					<EditText
						android:id="@+id/sleep_minite_et"
						android:layout_width="match_parent"            
						android:layout_height="40dp"   
						android:gravity="center"
						android:background="@color/agingtest_bkground"
						android:layout_gravity="center"
						android:maxLength="4"
						android:inputType="number"
						android:textColor="@android:color/white"
						android:textSize="16sp" 
						android:text="@string/serial_duration_def_minute"/>
					<View android:layout_width="match_parent"            
						android:layout_height="1dp" 
						android:layout_gravity="bottom"
						android:background="@android:color/white"/>
			</LinearLayout>
			<TextView
		        android:layout_width="wrap_content"            
		        android:layout_height="wrap_content"   
		        android:layout_centerVertical="true"  
		        android:layout_marginLeft="15dp"
		        android:layout_toRightOf="@id/serial_sleep_lt"         
		        android:textSize="16sp" 
		        android:text="@string/duration_minute"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            >
			 <TextView  
		        android:id="@+id/test_report_tv"
		        android:layout_width="wrap_content"            
		        android:layout_height="wrap_content"           
		        android:layout_weight="1"   
		        android:textSize="14sp" 
		        android:text="@string/agingtest_testreport"/>
	        <TextView  
		        android:id="@+id/reboot_report_tv"
		        android:layout_width="wrap_content"            
		        android:layout_height="wrap_content"       
		        android:textColor="@android:color/holo_red_dark"    
		        android:layout_weight="1"   
		        android:textSize="14sp" 
		        android:text="@string/reboot_agingtest_testreport"/>
	        <TextView  
		        android:id="@+id/sleep_report_tv"
		        android:layout_width="wrap_content"            
		        android:layout_height="wrap_content"    
		        android:textColor="@android:color/holo_red_dark"           
		        android:layout_weight="1"   
		        android:textSize="14sp" 
		        android:text="@string/sleep_agingtest_testreport"/>
        </LinearLayout>
    </LinearLayout>
	<LinearLayout
	    android:id="@+id/content_lt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"    
        android:paddingLeft="5dp"
    	android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/serial_lt"    
        android:orientation="vertical"             
        >    
        <TextView
	        android:layout_width="match_parent"            
	        android:layout_height="wrap_content"    
	        android:textStyle="bold"          
	        android:textSize="16sp" 
	        android:text="@string/agingtest_notice"/>
        <GridView
	        android:id="@+id/agingtest_gv"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"	       
	        android:gravity="center"
	        android:horizontalSpacing="5dp"
	        android:numColumns="3"
	        android:stretchMode="columnWidth"
	        android:verticalSpacing="5dp" />
        
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"> 
	        <CheckBox 
			android:id="@+id/ddr_test_select" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/prize_ddr_test"
			android:checked="true"/>
	        <TextView
	            android:id="@+id/ddr_test_info" 
		        android:layout_width="wrap_content"            
		        android:layout_height="match_parent"  
		        android:layout_marginLeft="5dp"  
		        android:gravity="center"		
		        android:textColor="@color/green"		
		        android:textSize="16sp" 
		        android:text="@string/no_test"/>
        </LinearLayout>
        
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="45dp"
		    android:orientation="horizontal">    
		    <TextView
		        android:layout_width="wrap_content"            
		        android:layout_height="match_parent"  
				android:gravity="center"				
		        android:textSize="16sp" 
		        android:text="@string/duration"/>
			<LinearLayout
				android:layout_width="40dp"
				android:layout_height="match_parent"
				android:orientation="vertical">
					<EditText
						android:id="@+id/hour_edt"
						android:layout_width="match_parent"            
						android:layout_height="40dp"   
						android:gravity="center"
						android:background="@color/agingtest_bkground"
						android:layout_gravity="center"
						android:maxLength="2"
						android:inputType="number"
						android:textColor="@android:color/white"
						android:textSize="16sp" 
						android:text="@string/duration_def_hour"/>
					<View android:layout_width="match_parent"            
						android:layout_height="1dp" 
						android:layout_gravity="bottom"
						android:background="@android:color/white"/>
			</LinearLayout>
		    <TextView
		        android:layout_width="wrap_content"            
		        android:layout_height="match_parent"  
				android:layout_marginLeft="15dp"
				android:gravity="center"
		        android:textSize="16sp" 
		        android:text="@string/duration_hour"/>
		    
			<LinearLayout
				android:layout_width="40dp"
				android:layout_height="match_parent"
				android:layout_marginLeft="30dp"
				android:gravity="center"
				android:orientation="vertical">
					<EditText
						android:id="@+id/minute_edt"
						android:layout_width="match_parent"            
						android:layout_height="40dp"    
						android:gravity="center"
						android:background="@color/agingtest_bkground"
						android:textColor="@android:color/white"
						android:maxLength="2"
						android:inputType="number"
						android:textSize="16sp" 
						android:layout_gravity="center"
						android:text="@string/duration_def_minute"/>
					<View android:layout_width="match_parent"            
						android:layout_height="1dp" 
						android:layout_gravity="bottom"
						android:background="@android:color/white"/>
			</LinearLayout>
		    <TextView
		        android:layout_width="wrap_content"            
		        android:layout_height="match_parent" 
				android:layout_marginLeft="15dp"
				android:gravity="center"				
		        android:textSize="16sp" 
		        android:text="@string/duration_minute"/>
	</LinearLayout>
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:orientation="horizontal"> 
	<TextView
	        android:id="@+id/duration_detail_tv"
	        android:layout_width="match_parent"            
	        android:layout_height="wrap_content"    
	        android:layout_marginLeft="5dp"          
		        android:layout_weight="2"    
	        android:textSize="14sp" 
	        android:text="@string/last_duration_detail"/>
	        <Button
	            android:id="@+id/factoryset"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"  
	            android:layout_gravity="center_vertical"
	            android:padding="2dp"
	            android:background="@drawable/aging_start_btn"
	            android:text="@string/factoryset"
	            android:textColor="@android:color/white"
	            android:textSize="20sp" />
        </LinearLayout>

	</LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"          
        android:layout_alignParentBottom="true"
		android:paddingLeft="15dp"
		android:paddingRight="15dp"
		android:paddingTop="5dp"
		android:paddingBottom="5dp"
        android:orientation="vertical"             
        >    
        <Button
	        android:id="@+id/agingteststart_bt"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"			
	        android:textSize="16sp" 
			android:background="@drawable/aging_start_btn"
			android:textColor="@android:color/white"
	        android:text="@string/start_agingtest" />
	</LinearLayout>
</RelativeLayout>
